--- a/.gitignore
+++ b/.gitignore
@@ -32,4 +32,28 @@
 *.log
 
 # Environment variables file
-.env
+*.env
+
+*logs
+*.log
+*npm-debug.log*
+*yarn-debug.log*
+*yarn-error.log*
+*pnpm-debug.log*
+*lerna-debug.log*
+
+*node_modules
+*dist
+*dist-ssr
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
