--- a/ui/package.json
+++ b/ui/package.json
@@ -21,6 +21,7 @@
     "@tanstack/react-query": "^5.14.6",
     "@tanstack/react-query-devtools": "^5.14.6",
     "@tanstack/react-table": "^8.11.2",
+    "axios": "^1.6.5",
     "firebase": "^10.7.0",
     "jotai": "^2.6.0",
     "jotai-effect": "^0.2.3",
